@@ -7,6 +7,11 @@ in ether_ipApp/src/drvEtherIP.h are updated accordingly,
 so that you can see the current version at runtime via
 drvEtherIP_report.
 
+* 2012, Jul 18 ether_ip-2.24.1
+David Dudley provided correction to fix interfernce between BOOL tags
+and register array access.  Boolean tag flag was in the wrong location,
+and would prevent access to variable array elements.
+
 * 2011, Oct 5 ether_ip-2-24
 David Dudley provided a fix for BOOL tags.
 BOOL[] and bits-in-DINT worked fine, but when attaching
